# mcp-langgraph-store-file-system

./: .gitignore  README.md  env.example  pyproject.toml
files/: .gitignore  README.md  deep_research.json  memories.json  memories.json.example  programming.json
src/: __init__.py  server.py
src/core/: __init__.py  file_config.py  logger.py  settings.py
src/database/: __init__.py  file_store.py  memory_store.py  mongodb_langgraph_client.py  postgresql_langgraph_client.py  redis_langgraph_client.py  store_factory.py
src/services/: __init__.py
