[project]
name = "mcp-langgraph-store-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-checkpoint-redis>=0.1.1",
    "langgraph-store-mongodb>=0.1.0",
    "python-dotenv>=1.1.1",
]
