[project]
name = "mcp-langgraph-store-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.12.3",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-checkpoint-redis>=0.1.1",
    "langgraph-store-mongodb>=0.1.0",
    "mcp[cli]>=1.16.0",
    "psycopg-binary>=3.2.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
mcp-langgraph-store = "server:mcp"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "database", "services"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
